객체지향프로그래밍 정리 추가

--- a/_posts/2020-10-28-객체지향프로그래밍.md
+++ b/_posts/2020-10-28-객체지향프로그래밍.md
@@ -4,7 +4,7 @@ date: 2020-10-29
 categories: OOP
 ---
 
-##(1) 객체지향언어란?
+## (1) 객체지향언어란?
 단순하게 말하자면 프로그래밍 언어에 '객체 지향 개념 규칙' 이 합쳐진 것이다. 
 이러한 규칙들을 활용하여 코드 간에 서로 관계를 맺어줌으로써 유기적으로 프로그램을 구성할 수 있다.
 
@@ -14,9 +14,9 @@ categories: OOP
 >2) 코드 간의 관계를 이용하여 적은 노력으로 쉽게 코드를 변경 할 수 있다. (유지보수)
 >3) 제어자와 메서드를 이용하여 데이터를 보호하고, 올바른 값을 유지하도록 하며, 코드의 중복을 제거하여 코드의 불일치로 인한 오동작을 방지한다. (중복코드제거)
 
-**Watch out!** 너무 객체지향개념에 얽매여서 고민하기 보다는 일단 프로그램을 기능적으로 완성한 다음에 계속해서 리팩토링하여 코드를 개선하는 것이 좋다.{: .notice--info}
+<p class="notice--info"> **Watch out!** 너무 객체지향개념에 얽매여서 고민하기 보다는 일단 프로그램을 기능적으로 완성한 다음에 계속해서 리팩토링하여 코드를 개선하는 것이 좋다. </p>
 
-##(2) 클래스와 객체란?
+## (2) 클래스와 객체란?
 
 클래스 - 객체의 설계도
 객체 - 클래스에 정의된 내용대로 메모리에 생성된 것
@@ -48,7 +48,7 @@ t1과 t2의 각 인스턴스의 속성은 서로 다른 값을 유지하며, 메
 t1 = t2; //t1이 저장하고 있는 값(주소)를 t2에 저장한다. t2가 t1이 참조하고 있던 인스턴스를 같이 참조하게 된다.
 </pre>
 
-**Watch out!** 자신을 참조하고 있는 참조변수가 하나도 없는 인스턴스는 더 이상 사용되지 않으므로 가비지 컬렉터에 의해 자동적으로 메모리에서 제거된다.{: .notice--info}
+<p class="notice--info"> **Watch out!** 자신을 참조하고 있는 참조변수가 하나도 없는 인스턴스는 더 이상 사용되지 않으므로 가비지 컬렉터에 의해 자동적으로 메모리에서 제거된다.</p>
 
 
 ## (4) 객체 배열 
