객체지향프로그래밍 정리 추가

--- a/_posts/2020-10-28-객체지향프로그래밍.md
+++ b/_posts/2020-10-28-객체지향프로그래밍.md
@@ -98,5 +98,38 @@ Time t1 = new Time();
 Time t2 = new Time();
 ```
 
+## (6) 변수와 메서드
+
+변수는 선언된 위치에 따라서 종류가 달라진다.
+
+1. 클래스 변수<br>
+2. 인스턴스 변수<br>
+3. 지역 변수<br>
+
+'멤버 변수' 를 제외한 다른 변수는 모두 지역 변수이며(주로 메서드 영역 안에 선언되는 것들)
+멤버 변수 중 <strong>static</strong>이 붙은 것은 클래스 변수, 붙지 않은 것은 인스턴스 변수이다.
+
+```java
+int iv; // 인스턴스 변수
+static int cv;  // 클래스 변수(static 변수, 공유변수)
+
+void method(){
+    int lv = 0; // 지역 변수
+}
+```
+
+| 변수의 종류         | 선언 위치     |  생성 시기                                                     |
+|------------------|----------  |--------------------------------------------------------------|
+| 클래스 변수     | 클래스 영역         | 클래스에 메모리가 올라 갈 떄          |
+| 인스턴스 변수    | 클래스 영역     | 인스턴스가 생성되었을 때                               |
+| 지역 변수       | 클래스 영역이 아닌 곳. (메서드, 생성자, 초기화 블럭 내부)      | 변수 선언문이 수행되었을 때 |
+
+
+
+
+
+
+
+
 
 <kbd>reference ; 자바의 정석 3판</kbd>
