--- a/_posts/2020-10-28-객체지향프로그래밍.md
+++ b/_posts/2020-10-28-객체지향프로그래밍.md
@@ -118,18 +118,98 @@ void method(){
 }
 ```
 
-| 변수의 종류         | 선언 위치     |  생성 시기                                                     |
-|------------------|----------  |--------------------------------------------------------------|
-| 클래스 변수     | 클래스 영역         | 클래스에 메모리가 올라 갈 떄          |
-| 인스턴스 변수    | 클래스 영역     | 인스턴스가 생성되었을 때                               |
+| 변수의 종류         | 선언 위치     |  생성 시기                                                      |
+|------------------|----------  |--------------------------------------------------------------    |
+| 클래스 변수     | 클래스 영역         | 클래스에 메모리가 올라 갈 때                                     |
+| 인스턴스 변수    | 클래스 영역     | 인스턴스가 생성되었을 때                                            |
 | 지역 변수       | 클래스 영역이 아닌 곳. (메서드, 생성자, 초기화 블럭 내부)      | 변수 선언문이 수행되었을 때 |
 
 
+1) 인스턴스 변수 
+<br>
+클래스 영역에 선언. 인스턴스는 독립적인 저장공간을 가지므로 서로 다른 값을 가질 수 있다.<br>
+<strong>인스턴스마다 고유한 상태를 유지해야 하는 속성의 경우, 인스턴스 변수로 선언한다</strong><br>
+
+2) 클래스 변수
+<br>
+인스턴스 변수 앞에 static을 붙여서 선언한다. 모든 인스턴스가 공통된 저장공간(변수)을 공유한다.<br>
+<strong>인스턴스들이 공통적인 값을 유지해야 하는 속성의 경우, 클래스 변수로 선언한다</strong><br>
+클래스가 메모리에 로딩 될 때 생성되어 프로그램이 종료될 때 까지 유지됨.<br>
+
+3) 지역 변수
+
+메서드 내에서만 사용 가능.
 
 
+## (7) 클래스 변수와 인스턴스 변수의 차이를 좀더 알아보자.
+
+고정적이어야 할 것과 커스텀 해도 무방한 것의 차이같다.<br>
+예를 들면 화투를 제작하려고 할 때, 화투의 width와 height은 전부 같아야 하는 반면, 화투 안의 그림은 전부 달라야 할 것이다.<br>
+전부 다른다는 것은 각 인스턴스 마다 자신의 고유한 상태를 가져야 한다는 것이다.<br> 
+따라서 width, height은 static을 붙여 클래스 변수로 만들고 그림은 인스턴스 변수로 만든다.<br>
+
+<p class="notice--info"> <strong>Watch out!</strong> 클래스 변수(static 변수)는 객체생성 없이 '클래스이름.클래스변수'로 직접 사용 가능하다.</p>
 
 
+## (8) 메서드란?
 
+메서드란 <strong>특정 작업을 수행하는 일련의 문장들을 묶은 것</strong>이다.<br>
+메서드를 사용하는 이유는 재사용성, 중복코드 제거, 프로그램 구조화 등이 있다.<br>
+메서드를 만들어 놓고 필요한 곳마다 호출하면 코드도 깔끔해지고 유지보수 할 때도 메서드만 고치면 되니 편하다!<br>
+
+<p class="notice--info"> <strong>Watch out!</strong> 큰 규모의 프로그램에서는 문장들을 작업단위로 나눠서 여러 개의 메서드에 담아 프로그램의 구조를 단순화시키는 것이 필수적이다. </p>
+
+메서드 안에 선언된 변수들을 지역 변수라고 한다.<br>
+<p class="notice--info"> <strong>Watch out!</strong> 매개 변수도 메서드 내에 선언된 것으로 간주하므로 지역변수이다. </p><br>
+
+같은 클래스 내의 메서드 끼리는 참조변수를 사용하지 않고도 호출이 가능하지만 <strong>static 메서드는 같은 클래스 내의 인스턴스 메서드를 호출 할 수 없다.</strong><br>
+
+
+## (9) 매개 변수의 유효성 검사
+
+<strong>타입만 맞으면 어떤 값도 매개변수를 통하여 넘어올 수 있기 때문에, 가능한 모든 경우의 수에 대해 고민하고 그에 대비한 코드를 작성해야 한다.</strong>
+
+
+## (10) JVM의 메모리 구조
+
+응용 프로그램이 실행되면, JVM은 시스템으로부터 프로그램을 수행하는데 필요한 메모리를 할당받고, 용도에 따라 여러 영역으로 나누어 관리한다.
+
+1) 메서드 영역<br>
+    - 클래스 사용시, jvm은 해당 클래스의 *.class 파일을 읽어서 분석하여 클래스에 대한 정보를 이 곳에 저장 한다. 그 클래스의 클래스 변수도 이 곳에 함께 생성된다.
+2) 힙<br>
+    - 인스턴스가 생성되는 공간. 인스턴스 변수들이 생성되는 공간.
+3) 호출 스택(call stack, execution stack)<br>
+    - 메서드의 작업에 필요한 메모리 공간을 제공. 메서드 호출 시, 호출스택에 호출된 메서드를 위한 메모리가 할당된다.<br>
+     이 메모리는 메서드가 작업을 수행하는 동안 지역변수들과 연산의 중간결과 등을 저장하는데 사용된다.<br>
+     메서드가 작업을 마치면 할당되었던 메모리공간은 반환된다.<br>
+     
+<p class="notice--info"> <strong>Watch out!</strong> 호출 스택에 제일 위에 있는 메서드가 현재 실행 중인 메서드이다. </p><br>
+     
+```java
+class CallstackTest{ 
+    
+    public static void main(String[] args){
+        first();
+    }       
+    
+    static void fisrt(){
+        second();
+    }
+
+    static void second(){
+        System.out.println("second method");
+    }
+}
+```     
+
+해당 메서드 실행 흐름
+```java
+
+                println------------------------->
+            second---------------------------------->
+        first------------------------------------------->
+    main--------------------------------------------------->
+``` 
 
 
 <kbd>reference ; 자바의 정석 3판</kbd>
