객체지향프로그래밍 추가

--- a/_posts/2020-10-28-객체지향프로그래밍.md
+++ b/_posts/2020-10-28-객체지향프로그래밍.md
@@ -78,12 +78,11 @@ Tv[] tvArr = { new Tv(), new Tv(), new Tv() };
 지금까지 객체지향적인 관점에서 클래스와 객체를 살펴보았다. 
 프로그래밍적 관점에서의 클래스란, 다음과 같이 정의할 수 있다.
 
->1. 데이터와 함수의 결합
->    서로 관련된 변수들을 정의하고 이들에 대한 작업을 수행하는 함수들을 함께 정의한 것.
+1. 데이터와 함수의 결합<br>
+    - 서로 관련된 변수들을 정의하고 이들에 대한 작업을 수행하는 함수들을 함께 정의한 것.<br>
 
->2. 사용자 정의 타입(user defined type)
->    primitive type 외에 서로 관련된 변수들을 묶어서 하나의 타입으로 새로 추가하는 것.
->    객체지향언어에서는 클래스가 곧 사용자 정의 타입.
+2. 사용자 정의 타입(user defined type)<br>
+    - primitive type 외에 서로 관련된 변수들을 묶어서 하나의 타입으로 새로 추가하는 것. 객체지향언어에서는 클래스가 곧 사용자 정의 타입.<br>
     
 비객체지향적 코드
 ```java
@@ -122,21 +121,21 @@ void method(){
 |------------------|----------  |--------------------------------------------------------------    |
 | 클래스 변수     | 클래스 영역         | 클래스에 메모리가 올라 갈 때                                     |
 | 인스턴스 변수    | 클래스 영역     | 인스턴스가 생성되었을 때                                            |
-| 지역 변수       | 클래스 영역이 아닌 곳. (메서드, 생성자, 초기화 블럭 내부)      | 변수 선언문이 수행되었을 때 |
+| 지역 변수       | 클래스 영역이 아닌 곳.<br>(메서드, 생성자, 초기화 블럭 내부)      | 변수 선언문이 수행되었을 때 |
 
 
-1) 인스턴스 변수 
+##### 1) 인스턴스 변수 
 <br>
 클래스 영역에 선언. 인스턴스는 독립적인 저장공간을 가지므로 서로 다른 값을 가질 수 있다.<br>
 <strong>인스턴스마다 고유한 상태를 유지해야 하는 속성의 경우, 인스턴스 변수로 선언한다</strong><br>
 
-2) 클래스 변수
+##### 2) 클래스 변수
 <br>
 인스턴스 변수 앞에 static을 붙여서 선언한다. 모든 인스턴스가 공통된 저장공간(변수)을 공유한다.<br>
 <strong>인스턴스들이 공통적인 값을 유지해야 하는 속성의 경우, 클래스 변수로 선언한다</strong><br>
 클래스가 메모리에 로딩 될 때 생성되어 프로그램이 종료될 때 까지 유지됨.<br>
 
-3) 지역 변수
+##### 3) 지역 변수
 
 메서드 내에서만 사용 가능.
 
@@ -161,25 +160,23 @@ void method(){
 
 메서드 안에 선언된 변수들을 지역 변수라고 한다.<br>
 <p class="notice--info"> <strong>Watch out!</strong> 매개 변수도 메서드 내에 선언된 것으로 간주하므로 지역변수이다. </p><br>
-
 같은 클래스 내의 메서드 끼리는 참조변수를 사용하지 않고도 호출이 가능하지만 <strong>static 메서드는 같은 클래스 내의 인스턴스 메서드를 호출 할 수 없다.</strong><br>
 
 
 ## (9) 매개 변수의 유효성 검사
 
-<strong>타입만 맞으면 어떤 값도 매개변수를 통하여 넘어올 수 있기 때문에, 가능한 모든 경우의 수에 대해 고민하고 그에 대비한 코드를 작성해야 한다.</strong>
-
+타입만 맞으면 어떤 값도 매개변수를 통하여 넘어올 수 있기 때문에, 가능한 모든 경우의 수에 대해 고민하고 그에 대비한 코드를 작성해야 한다.
 
 ## (10) JVM의 메모리 구조
 
 응용 프로그램이 실행되면, JVM은 시스템으로부터 프로그램을 수행하는데 필요한 메모리를 할당받고, 용도에 따라 여러 영역으로 나누어 관리한다.
-
-1) 메서드 영역<br>
-    - 클래스 사용시, jvm은 해당 클래스의 *.class 파일을 읽어서 분석하여 클래스에 대한 정보를 이 곳에 저장 한다. 그 클래스의 클래스 변수도 이 곳에 함께 생성된다.
-2) 힙<br>
-    - 인스턴스가 생성되는 공간. 인스턴스 변수들이 생성되는 공간.
-3) 호출 스택(call stack, execution stack)<br>
-    - 메서드의 작업에 필요한 메모리 공간을 제공. 메서드 호출 시, 호출스택에 호출된 메서드를 위한 메모리가 할당된다.<br>
+<br>
+##### 1) 메서드 영역<br>
+    - 클래스 사용시, jvm은 해당 클래스의 *.class 파일을 읽어서 분석하여 클래스에 대한 정보를 이 곳에 저장 한다. 그 클래스의 클래스 변수도 이 곳에 함께 생성된다.<br>
+##### 2) 힙<br>
+    - 인스턴스가 생성되는 공간. 인스턴스 변수들이 생성되는 공간.<br>
+##### 3) 호출 스택(call stack, execution stack)<br>
+    - 메서드의 작업에 필요한 메모리 공간을 제공.<br> 메서드 호출 시, 호출스택에 호출된 메서드를 위한 메모리가 할당된다. 
      이 메모리는 메서드가 작업을 수행하는 동안 지역변수들과 연산의 중간결과 등을 저장하는데 사용된다.<br>
      메서드가 작업을 마치면 할당되었던 메모리공간은 반환된다.<br>
      
@@ -202,7 +199,7 @@ class CallstackTest{
 }
 ```     
 
-해당 메서드 실행 흐름
+해당 메서드 실행 흐름(아래에서 위로 올라감)
 ```java
 
                 println------------------------->
