수정사항 커밋

--- a/_posts/2020-10-28-객체지향프로그래밍.md
+++ b/_posts/2020-10-28-객체지향프로그래밍.md
@@ -171,11 +171,14 @@ void method(){
 
 응용 프로그램이 실행되면, JVM은 시스템으로부터 프로그램을 수행하는데 필요한 메모리를 할당받고, 용도에 따라 여러 영역으로 나누어 관리한다.
 <br>
-##### 1) 메서드 영역<br>
+##### 1) 메서드 영역
+<br>
     - 클래스 사용시, jvm은 해당 클래스의 *.class 파일을 읽어서 분석하여 클래스에 대한 정보를 이 곳에 저장 한다. 그 클래스의 클래스 변수도 이 곳에 함께 생성된다.<br>
-##### 2) 힙<br>
+##### 2) 힙
+<br>
     - 인스턴스가 생성되는 공간. 인스턴스 변수들이 생성되는 공간.<br>
-##### 3) 호출 스택(call stack, execution stack)<br>
+##### 3) 호출 스택(call stack, execution stack)
+<br>
     - 메서드의 작업에 필요한 메모리 공간을 제공.<br> 메서드 호출 시, 호출스택에 호출된 메서드를 위한 메모리가 할당된다. 
      이 메모리는 메서드가 작업을 수행하는 동안 지역변수들과 연산의 중간결과 등을 저장하는데 사용된다.<br>
      메서드가 작업을 마치면 할당되었던 메모리공간은 반환된다.<br>
