--- a/_posts/2020-10-30-객체지향프로그래밍2.md
+++ b/_posts/2020-10-30-객체지향프로그래밍2.md
@@ -142,6 +142,76 @@ class ConcatenateTest {
 
 ex) 인수가 있을수도 있고 없을수도 있는 경우..?
 
+```java
+class varargs {
+            
+    String con(String str, String ...args){};
+    String con(String ...args){};
+}
+```
+
+<p class="notice--info"> <strong>Watch out!</strong> 오버로딩 된 메서드가 구분되지 않아서 에러가 발생하기 쉽기 때문에 가변인자는 되도록 오버로딩 하지 않는게 좋다. </p><br>
+
+
+### (18) 생성자(Constructor)란?
+
+인스턴스가 생성될 때 호출되는 '인스턴스 초기화 메서드' 이다. 따라서 인스턴스 변수의 초기화 작업에 주로 사용되며, 인스터스 생성 시에 실행되어야 할 작업을 위해서도 사용된다.
+생성자는 메서드와 유사하지만 리턴값이 없다는 점이 다르다. 생성자의 조건은 다음과 같다.
+
+> 생성자의 이름은 클래스의 이름과 같아야 한다.
+> 생성자는 리턴 값이 없다.
+
+생성자도 오버로딩이 가능하므로 하나의 클래스에 여러 개의 생성자가 존재할 수 있다.
+ex) 매개변수가 없는 생성자, 매개변수가 있는 생성자
+
+<p class="notice--info"> <strong>Watch out!</strong> 생성자는 쉽게 말한다면 인스턴스 변수들의 초기화에 사용되는 조금 특별한 메서드이다. </p><br>
+
+```java
+Card c = new Card();
+```
+해당 코드에서는 생성자 Card()가 호출되어 수행된다.
+
+<strong>사실 모든 클래스에는 반드시 하나 이상의 생성자가 정의되어 있어야 한다</strong>
+그동안 클래스에 생성자를 정의하지 않고도 인스턴스를 생성할 수 있었던 이유는 컴파일러가 제공하는 '기본 생성자' 때문이다.
+```java
+//기본생성자
+//클래스이름(){}
+Card(){}
+```
+매개변수, 내용이 없는 아주 간단한 생성자이다.
+특별히 인스턴스 초기화 작업이 요구되어지지 않는다면, 컴파일러가 제공하는 기본 생성자를 사용하는 것도 좋다.(클래스에 정의된 생성자가 하나도 없을 때 자동 생성된다.)
+
+<p class="notice--info"> <strong>Watch out!</strong> 클래스의 접근 제어자가 public인 경우에는 기본 생성자로 public 클래스이름(){} 이 추가된다.</p><br>
+
+
+### (19) 매개변수가 있는 생성자
+
+생성자도 메서드처럼 매개변수를 선언하여 호출 시 값을 넘겨받고 인스턴스의 초기화 작업에 사용할 수 있다.  인스턴스마다 각기 다른 값으로 초기화 되어야 하는 경우가 많기 때문에
+매개변수를 사용한 초기화는 매우 유용하다.
+
+```java
+class Car{
+    String color;
+    String gearType;
+    int door;
+
+    Card(){}
+    Card(String a, String b, int c){
+        color = a;
+        gearType = b;
+        door = c;
+    }
+}
+```
+
+### (20) 생성자에서 다른 생성자 호출하기 - this(), this
+
+같은 클래스라면 생성자 간에도 서로 호출이 가능하다. 
+
+> 생성자의 이름으로 this를 사용한다
+> 한 생성자에서 다른 생성자를 호출할 때는 반드시 첫 줄에서만 호출이 가능하다
+> - 
+
 
 
 
