--- a/_posts/2020-10-30-객체지향프로그래밍2.md
+++ b/_posts/2020-10-30-객체지향프로그래밍2.md
@@ -209,12 +209,47 @@ class Car{
 같은 클래스라면 생성자 간에도 서로 호출이 가능하다. 
 
 > 생성자의 이름으로 this를 사용한다
-> 한 생성자에서 다른 생성자를 호출할 때는 반드시 첫 줄에서만 호출이 가능하다
-> - 
+> <strong>한 생성자에서 다른 생성자를 호출할 때는 반드시 첫 줄에서만 호출이 가능하다</strong>
+
+```java
+Car() {
+color = "white";
+gearType = "auto"
+door = 4;
+}
+
+Car(){
+this("white", "auto", 4); //인스턴스 변수 color, gearType, door를 초기화 시킴
+}
+```
+
+같은 클래스 내의 생성자들은 일반적으로 서로 관계가 깊은 경우가 많아서 이처럼 서로 호출하도록 하여 유기적으로 연결해주면, 유지보수도 쉬워지고 더 좋은 코드를 얻을 수 있다.
+
+```java
+
+//생성자의 매개변수와 인스턴스 변수의 이름이 다를 경우. 서로 구별되므로 아무런 문제가 없다.
+Car(String c, String g, int d){
+    color = c;
+    gearType = g;
+    door = d;
+}
+
+//생성자의 매개변수와 인스턴스 변수의 이름이 같을 경우엔 참조변수 this를 통해 인스턴스 변수에 접근할수 있도록 구분해준다.
+Car(String color, String gearType, int door){
+    this.color = color;
+    this.gearType = gearType;
+    this.door = door;
+}
+```
+생성자의 매개변수로 인스턴스 변수들의 초기값을 제공받는 경우가 많기 때문에 이런 경우가 많다. 이럴때는 this를 사용하여 구별되도록 하는 것이 더 명확하고 이해하기 쉬운 코드이다.
+this를 사용할 수 있는 것은 인스턴스 멤버 뿐이다. static 메서드(클래스 메서드)에서는 인스턴스 멤버들을 사용할 수 없는 것처럼 this 역시 사용할 수 없다.
+static 메서드는 인스턴스를 생성하지 않고도 호출될 수 있으므로 static 메서드가 호출된 시점에 인스턴스가 존재하지 않을 수도 있기 때문이다.
+
+> this : 인스턴스 자신을 가리키는 참조 변수. 인스턴스의 주소가 저장되어 있다. 모든 인스턴스 메서드에 지역변수로 숨겨진 채로 존재한다.
+> this(), this(매개변수) : 생성자. 같은 클래스의 다른 생성자를 호출할 때 사용한다.
 
 
-
-
+<p class="notice--info"> <strong>Watch out!</strong> this와 this()는 비슷하게 생겼을 뿐 완전히 다른 것이다. this는 '참조 변수'이고 this()는 생성자이다. </p>
 
 
 
