객체 지향 프로그래밍 정리 2 추가

--- a/_posts/2020-10-30-객체지향프로그래밍2.md
+++ b/_posts/2020-10-30-객체지향프로그래밍2.md
@@ -62,9 +62,8 @@ class ReferenceReturnEx {
 
 > 더 알아볼것; call by value, call by reference
 
-재귀 호출은 필연적으로 조건문이 필요하다. 그저 호출만 한다면 무한정으로 자기 자신을 부르는 것이니<br>
-메소드를 종료시키는 조건문이 있어야 하기 때문이다.<br> 적절한 조건문이 없다면, 계속해서 재귀호출만 일어날뿐 메서드가 종료되지 않으므로<br>
-스택오버플로우 에러가 발생한다.
+재귀 호출은 필연적으로 조건문이 필요하다. 그저 호출만 한다면 무한정으로 자기 자신을 부르는 것이니
+메소드를 종료시키는 조건문이 있어야 하기 때문이다.<br> 적절한 조건문이 없다면, 계속해서 재귀호출만 일어날뿐 메서드가 종료되지 않으므로 스택오버플로우 에러가 발생한다.
 
 재귀호출은 반복문과 유사한 점이 많고, <strong>대부분의 재귀호출은 반복문으로 작성하는 것이 가능하다.</strong><br>
 그런데 반복문은 단순히 반복할 뿐이지만, 재귀호출은 매개변수 복사, 종료 후 복귀할 주소 저장 등<br>
@@ -92,16 +91,16 @@ class FactorialTest {
 ### (14) 클래스 메서드(static method)와 인스턴스 메서드
 
 변수에서 다뤘던 것과 같다. 메서드 앞에 static이 붙어있으면 클래스 메서드이고, 붙어있지 않으면 인스턴스 메서드이다.<br>
-인스턴스 메서드는 메서드의 작업을 수행하는데 인스턴스 변수를 필요로 하는 메서드이다. 그런데 인스턴스 메서드는 인스턴스 변수가 그렇듯<br>
-인스턴스를 생성해야만 호출할 수 있다. 반면 클래스 메서드는 인스턴스와 관계없는(인스턴스 변수나 인스턴스 메서드를 사용하지 않는)메서드이다.
+인스턴스 메서드는 메서드의 작업을 수행하는데 인스턴스 변수를 필요로 하는 메서드이다. 그런데 인스턴스 메서드는 인스턴스 변수가 그렇듯
+인스턴스를 생성해야만 호출할 수 있다.<br> 반면 클래스 메서드는 인스턴스와 관계없는(인스턴스 변수나 인스턴스 메서드를 사용하지 않는)메서드이다.
 
 > 1) 클래스를 설계할 시, 멤버 변수 중 모든 인스턴스에 공통으로 사용하는 변수에 static을 붙인다.<br>
 > 2) 클래스 변수(static 변수)는 인스턴스를 생성하지 않아도 언제든 참조 또는 호출이 가능하다.<br>
 > 3) 클래스 메서드(static 메서드)는 인스턴스를 생성하지 않으면 인스턴스 변수를 사용할 수 없다.<br>
->   - 클래스 메서드는 인스턴스 생성 없이 호출이 가능하므로, 클래스 메서드가 호출되었을 때 인스턴스가 존재하지 않을 수 있다.<br>
->   - 반면 인스턴스 변수나 메서드는 호출당했을 때 이미 static 변수, 메서드가 메모리에 존재하므로 클래식 변수, 메서드를 사용 가능하다.<br>
+> - 클래스 메서드는 인스턴스 생성 없이 호출이 가능하므로, 클래스 메서드가 호출되었을 때 인스턴스가 존재하지 않을 수 있다.<br>
+> - 반면 인스턴스 변수나 메서드는 호출당했을 때 이미 static 변수, 메서드가 메모리에 존재하므로 클래식 변수, 메서드를 사용 가능하다.<br>
 > 4) 메서드 내에서 인스턴스 변수를 사용하지 않는다면, static을 붙이는 것을 고려한다.<br>
->   - 메서드 호출시간이 짧아지므로 성능이 향상된다.<br>
+> - 메서드 호출시간이 짧아지므로 성능이 향상된다.<br>
 
 ### (15) 클래스 멤버와 인스턴스 멤버간의 참조와 호출
 
