객체 지향 프로그래밍 정리 2 추가

--- a/_posts/2020-10-30-객체지향프로그래밍2.md
+++ b/_posts/2020-10-30-객체지향프로그래밍2.md
@@ -92,16 +92,16 @@ class FactorialTest {
 
 변수에서 다뤘던 것과 같다. 메서드 앞에 static이 붙어있으면 클래스 메서드이고, 붙어있지 않으면 인스턴스 메서드이다.<br>
 인스턴스 메서드는 메서드의 작업을 수행하는데 인스턴스 변수를 필요로 하는 메서드이다. 그런데 인스턴스 메서드는 인스턴스 변수가 그렇듯
-인스턴스를 생성해야만 호출할 수 있다.<br> 반면 클래스 메서드는 인스턴스와 관계없는(인스턴스 변수나 인스턴스 메서드를 사용하지 않는)메서드이다.
+인스턴스를 생성해야만 호출할 수 있다.<br> 반면 클래스 메서드는 인스턴스와 관계없는(인스턴스 변수나 인스턴스 메서드를 사용하지 않는)메서드이다.<br>
 
-> 1) 클래스를 설계할 시, 멤버 변수 중 모든 인스턴스에 공통으로 사용하는 변수에 static을 붙인다.<br>
-> 2) 클래스 변수(static 변수)는 인스턴스를 생성하지 않아도 언제든 참조 또는 호출이 가능하다.<br>
-> 3) 클래스 메서드(static 메서드)는 인스턴스를 생성하지 않으면 인스턴스 변수를 사용할 수 없다.<br>
-> - 클래스 메서드는 인스턴스 생성 없이 호출이 가능하므로, 클래스 메서드가 호출되었을 때 인스턴스가 존재하지 않을 수 있다.<br>
-> - 반면 인스턴스 변수나 메서드는 호출당했을 때 이미 static 변수, 메서드가 메모리에 존재하므로 클래식 변수, 메서드를 사용 가능하다.<br>
-> 4) 메서드 내에서 인스턴스 변수를 사용하지 않는다면, static을 붙이는 것을 고려한다.<br>
-> - 메서드 호출시간이 짧아지므로 성능이 향상된다.<br>
-
+1) 클래스를 설계할 시, 멤버 변수 중 모든 인스턴스에 공통으로 사용하는 변수에 static을 붙인다.<br>
+2) 클래스 변수(static 변수)는 인스턴스를 생성하지 않아도 언제든 참조 또는 호출이 가능하다.<br>
+3) 클래스 메서드(static 메서드)는 인스턴스를 생성하지 않으면 인스턴스 변수를 사용할 수 없다.<br>
+    - 클래스 메서드는 인스턴스 생성 없이 호출이 가능하므로, 클래스 메서드가 호출되었을 때 인스턴스가 존재하지 않을 수 있다.<br>
+    - 반면 인스턴스 변수나 메서드는 호출당했을 때 이미 static 변수, 메서드가 메모리에 존재하므로 클래식 변수, 메서드를 사용 가능하다.<br>
+4) 메서드 내에서 인스턴스 변수를 사용하지 않는다면, static을 붙이는 것을 고려한다.<br>
+    - 메서드 호출시간이 짧아지므로 성능이 향상된다.<br>
+<br>
 ### (15) 클래스 멤버와 인스턴스 멤버간의 참조와 호출
 
 <p class="notice--info"> <strong>Watch out!</strong> 같은 클래스 내에서 클래스 멤버가 인스턴스 멤버를 참조 또는 호출해야 하는 경우는 드물다.<br> 
@@ -381,8 +381,8 @@ class InitTest{
     }
 }
 ```
-cv와 iv가 초기화되어가는 과정<br>
-cv가 메모리(method area)에 생성 -> cv = 0 -> cv = 1 -> cv = 2 -> iv가 메모리 heap에 존재하게 됨 -> iv = 0 -> iv = 1 -> iv = 2 -> iv = 3<br>
+> <strong>cv와 iv가 초기화되어가는 과정<br></strong>
+> cv가 메모리(method area)에 생성 -> cv = 0 -> cv = 1 -> cv = 2 -> iv가 메모리 heap에 존재하게 됨 -> iv = 0 -> iv = 1 -> iv = 2 -> iv = 3<br>
 
 
 ```java
