--- a/_posts/2020-11-09-security02.md
+++ b/_posts/2020-11-09-security02.md
@@ -66,7 +66,7 @@ spring boot 같은 경우는 단순히 의존성을 추가해주는 것만으로
 <br>
 <br>
 
-2) AbstractSecurityWebApplicationInitializer
+## 3) AbstractSecurityWebApplicationInitializer
 <br>
 java configuration 상에서 DelegatingFilterProxy를 웹서버에 등록시키려면 AbstractSecurityWebApplicationInitializer 클래스를 상속받으면 된다. 
 스프링에서 자동으로 이 클래스를 감지하여 애플리케이션의 모든 요청에 자동으로 보안을 적용시킨다. 
@@ -102,7 +102,7 @@ public abstract class AbstractSecurityWebApplicationInitializer implements WebAp
 ![중간 이미지](/images/spring_security_2_00.png)
 
 
-## 3. WebSecurityConfigurerAdapter 과 @EnableWebSecurity
+## 4) WebSecurityConfigurerAdapter 과 @EnableWebSecurity
 
 이제 스프링 시큐리티 기능들을 커스터마이징 할 수 있는 설정 파일을 작성해보자.
 <br>
@@ -127,7 +127,7 @@ public class SpringSecurityConfiguration extends WebSecurityConfigurerAdapter {
 @EnableWebSecurity
 public class SpringSecurityConfiguration extends WebSecurityConfigurerAdapter {
     
-    @Override
+    @Override   
     protected void configure(HttpSecurity http) throws Exception {
            //.....
     }
