--- a/_posts/2020-11-05-security01.md
+++ b/_posts/2020-11-05-security01.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: "rest api + ajax + jwt + spring security (1)"
-tags: [security]
+tags: [security],[ynm]
 comments: true
 ---
 
