--- a/_posts/2020-11-09-security02.md
+++ b/_posts/2020-11-09-security02.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: "rest api + ajax + jwt + spring security (2)"
-tags: [security],[ynm]
+tags: [security,ynm]
 comments: true
 ---
 
