--- a/_posts/2020-10-28-객체지향프로그래밍.md
+++ b/_posts/2020-10-28-객체지향프로그래밍.md
@@ -1,7 +1,8 @@
 ---
+layout: post
 title: "객체지향 프로그래밍 기본 (1)"
-date: 2020-10-29
-categories: OOP
+tags: [oop, java]
+comments: true
 ---
 
 ## (1) 객체지향언어란?
