--- a/_posts/2020-10-30-객체지향프로그래밍2.md
+++ b/_posts/2020-10-30-객체지향프로그래밍2.md
@@ -1,7 +1,8 @@
 ---
+layout: post
 title: "객체지향 프로그래밍 기본 (2)"
-date: 2020-10-30
-categories: OOP
+tags: [oop, java]
+comments: true
 ---
 
 ### (11) 기본형 매개변수와 참조형 매개변수
