--- a/content/blog/TIL/TIL_201123.md
+++ b/content/blog/TIL/TIL_201123.md
@@ -9,9 +9,7 @@ draft: false
 * 스터디 기록을 꾸준히 하기 위하여 여러 플랫폼을 찾아봤다. 
 위키 형식이 제일 낫지 않을까 싶어 골룸, 위키독스 등등을 하루종일 알아봤는데...
 이걸 나만 하는 것도 아니고, 기록하는 사람 환경도 다 다르고 하니
-그냥 간편한게 젤 낫지 않나 싶어서 일단 스터디계정으로 gitbook으로 페이지를 만들었다.
-
-[스터디 깃북](https://ynmstudy.gitbook.io/java-fundamentals/)
+그냥 간편한게 젤 낫지 않나 싶어서 일단 스터디계정으로 gitbook으로 페이지를 만들었다. [스터디 깃북](https://ynmstudy.gitbook.io/java-fundamentals/)
 
 * 그냥 건너뛸까 하다가 자바의 정석 챕터 1부터 정리를 시작했다. 이거 2년전에 산 책인데 각잡고 보는건 처음이다.
 
@@ -25,7 +23,7 @@ draft: false
 * 진짜 코로나 언제 끝나지? 집에만 있으니 점점 살찌는듯..
 
 ### 내일 할 일
-* gitbook-github 연동
+* gitbook-github 연동 + utteranc 댓글 추가 
 * 프로그래머스 알고리즘 문제 1개 풀기
 * 백기선 스프링코어 강의 듣고 정리
 
