--- a/content/blog/java/자바를 시작하면서.md
+++ b/content/blog/java/자바를 시작하면서.md
@@ -18,7 +18,8 @@ draft: false
 <br><br>
 개인적으로 자바를 아예 처음 배우는 개발자는 그냥 좀더 빠르고 짧게 끝낼수 있는 책을 보는게
 맞는 것 같고, 이 책은 실무적인 개발을 좀 해본 다음에 다시 보는게 좋은 것 같다.
-처음 봤을 때도 좋긴 하지만 일을 좀 하고 나서 보면 훨씬 이해가 잘 된다.(당연한건가..?)
+처음 봤을 때도 좋긴 하지만 일을 좀 하고 나서 보면 훨씬 이해가 잘 된다.
+(당연한건가..?)
 
 **정리기간**
 2020-11-23 ~
@@ -39,6 +40,7 @@ draft: false
 * 동적 로딩(Dynamic Loading)을 지원 
 
 <br>
+
 **1) 운영체제에 독립적이다.**
 <br><br>
 일종의 애뮬레이터인 자바가상머신(JVM)을 통해서 가능하다. 자바 응용프로그램은 운영체제나 하드웨어가 아닌 JVM하고만 통신하고, JVM이 자바 응용프로그램으로부터 전달받은 명령을 해당 운영체제가 이해할 수 있도록 변환하여 전달한다. (다만, JVM은 운영체제에 종속적이다.)
