--- a/content/blog/java/변수.md
+++ b/content/blog/java/변수.md
@@ -1,7 +1,7 @@
 ---
-title: '[자바의 정석] 2. 변수'
+title: '[챕터2] 변수'
 date: 2020-11-24 16:21:13
-category: 'java'
+category: '자바의정석'
 draft: false
 ---
 
