--- a/content/blog/java/자바를 시작하면서.md
+++ b/content/blog/java/자바를 시작하면서.md
@@ -1,7 +1,7 @@
 ---
-title: '[자바의 정석] 1. 자바를 시작하기 전에'
+title: '[챕터1] 자바를 시작하기 전에'
 date: 2020-11-23 16:21:13
-category: 'java'
+category: '자바의정석'
 draft: false
 ---
 
